Add routes for sending user data between pages

--- a/views/all_documents.pug
+++ b/views/all_documents.pug
@@ -12,75 +12,16 @@ html
         .container
             div.pre-scrollable.allDocsBox.col-xs-8
                 #accordion.panel.panel-group
-                    .panel.panel-default
-                        .brown.panel-heading
-                            h4.panel-title
-                                a.accordion-toggle(data-toggle='collapse', data-parent='#accordion', href='#col_1') Document 1 Name
-                        #col_1.panel-collapse.collapse
-                            .panel-body
-                                img.col-xs-3.document-image(src='http://pngimages.net/sites/default/files/document-png-image-54169.png')
-                                p Document description:
-                                p "Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum"
-                                a(method='GET' href='/doc-view-info')
-                                    h4.doc_download
-                                        u view all info
-                    .panel.panel-default
-                        .brown.panel-heading
-                            h4.panel-title
-                                a.accordion-toggle(data-toggle='collapse', data-parent='#accordion', href='#col_2') Document 2 Name
-                        #col_2.panel-collapse.collapse
-                            .panel-body
-                                img.col-xs-3.document-image(src='http://pngimages.net/sites/default/files/document-png-image-54169.png')
-                                p Document description:
-                                p "Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum"
-                                a(method='GET' href='/doc-view-info')
-                                    h4.doc_download
-                                        u view all info
-                    .panel.panel-default
-                        .brown.panel-heading
-                            h4.panel-title
-                                a.accordion-toggle(data-toggle='collapse', data-parent='#accordion', href='#col_3') Document 3 Name
-                        #col_3.panel-collapse.collapse
-                            .panel-body
-                                img.col-xs-3.document-image(src='http://pngimages.net/sites/default/files/document-png-image-54169.png')
-                                p Document description:
-                                p "Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum"
-                                a(method='GET' href='/doc-view-info')
-                                    h4.doc_download
-                                        u view all info
-                    .panel.panel-default
-                        .brown.panel-heading
-                            h4.panel-title
-                                a.accordion-toggle(data-toggle='collapse', data-parent='#accordion', href='#col_4') Document 4 Name
-                        #col_4.panel-collapse.collapse
-                            .panel-body
-                                img.col-xs-3.document-image(src='http://pngimages.net/sites/default/files/document-png-image-54169.png')
-                                p Document description:
-                                p "Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum"
-                                a(method='GET' href='/doc-view-info')
-                                    h4.doc_download
-                                        u view all info
-                    .panel.panel-default
-                        .brown.panel-heading
-                            h4.panel-title
-                                a.accordion-toggle(data-toggle='collapse', data-parent='#accordion', href='#col_5') Document 5 Name
-                        #col_5.panel-collapse.collapse
-                            .panel-body
-                                img.col-xs-3.document-image(src='http://pngimages.net/sites/default/files/document-png-image-54169.png')
-                                p Document description:
-                                p "Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum"
-                                a(method='GET' href='/doc-view-info')
-                                    h4.doc_download
-                                        u view all info
-                    .panel.panel-default
-                        .brown.panel-heading
-                            h4.panel-title
-                                a.accordion-toggle(data-toggle='collapse', data-parent='#accordion', href='#col_6') Document 6 Name
-                        #col_6.panel-collapse.collapse
-                            .panel-body
-                                img.col-xs-3.document-image(src='http://pngimages.net/sites/default/files/document-png-image-54169.png')
-                                p Document description:
-                                p "Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum"
-                                a(method='GET' href='/doc-view-info')
-                                    h4.doc_download
-                                        u view all info
+                    each doc in user_documents
+                        .panel.panel-default
+                            .brown.panel-heading
+                                h4.panel-title
+                                    a.accordion-toggle(data-toggle='collapse', data-parent='#accordion', href='#col_1') #{doc.title}
+                            #col_1.panel-collapse.collapse
+                                .panel-body
+                                    img.col-xs-3.document-image(src='http://pngimages.net/sites/default/files/document-png-image-54169.png')
+                                    p Document description:
+                                    p #{doc.description}
+                                    a(method='GET' href='/doc-view-info')
+                                        h4.doc_download
+                                            u view all info
