--- a/views/template.pug
+++ b/views/template.pug
@@ -9,15 +9,15 @@ html
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
-					a.navbar-brand(href='#') Soulstone
+					a.navbar-brand(href='/go-main-page') Soulstone
 				#myNavbar.collapse.navbar-collapse
 					ul.nav.navbar-nav
 						li
-							a(href='#') Cursuri
+							a(href='/go-courses') Cursuri
 						li
-							a(href='#') Profesori
+							a(href='/go-labs-sems') Laboratoare si seminare
 						li
-							a(href='#') Subiecte Examen
+							a(href='/go-exams') Subiecte Examen
 					ul.nav.navbar-nav.navbar-right
 						li
 							a(href='#')
