--- a/views/head.pug
+++ b/views/head.pug
@@ -6,6 +6,6 @@ head
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
 	// Latest compiled JavaScript
 	script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-	link(rel='stylesheet', type='text/css', href='style.css')
+	link(rel='stylesheet', type='text/css', href='/public/style.css')
 	link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
 	title IOC - Soulstone
