--- a/views/document_page.pug
+++ b/views/document_page.pug
@@ -41,7 +41,7 @@ html
 				span.fa.fa-star.checked
 				span.fa.fa-star
 				span.fa.fa-star
-				form#rate_form(onchange="rateFunction()" id='RatingButtons')
+				form(onchange="rateFunction()" id='RatingButtons')
 					input(type='radio' name='rate' value='1')
 					| 1 
 					input(type='radio' name='rate' value='2')
